# demmaker

./: .gitignore  Makefile  README.md  demmaker.py  demmaker_cli.py  pyproject.toml  requirements.txt  utils.py
demmaker/: __init__.py  font.py  maker.py
extractors/: telegram.py
